--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main.js",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,7 +26,8 @@
     "prisma:studio:master": "prisma studio --schema=prisma/master/schema.prisma",
     "prisma:studio:tenant": "prisma studio --schema=prisma/tenant/schema.prisma",
     "prisma:seed": "ts-node prisma/master/seed.ts",
-    "db:seed": "npm run prisma:seed"
+    "db:seed": "npm run prisma:seed",
+    "permissions:seed": "ts-node -r tsconfig-paths/register src/scripts/seed-permissions.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/master/seed.ts"
@@ -56,6 +57,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.10.6",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
